changed font familys

--- a/index.html
+++ b/index.html
@@ -45,8 +45,13 @@
         <!-- STYLES -->
         <!-- Fonts -->
         <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200;500;700&family=Varela+Round&display=swap" rel="stylesheet">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=BBH+Sans+Bartle&display=swap" rel="stylesheet">
+
         <!-- Bootstrap -->
         <link href="css/bootstrap.min.css" rel="stylesheet">
+        
         <!-- Main Stylesheet -->
         <link href="css/style.css" rel="stylesheet">
     </head>
