initial scroller image

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
         <!-- Bootstrap -->
         <link href="css/bootstrap.min.css" rel="stylesheet">
-        
+
         <!-- Main Stylesheet -->
         <link href="css/style.css" rel="stylesheet">
     </head>
@@ -127,7 +127,7 @@
                                     <button type="button" data-bs-target="#coming-soon-carousel" data-bs-slide-to="3" aria-label="Slide 4"></button>
                                 </div>
                                 <div class="carousel-item active">
-                                    <img src="images/slide.webp" class="img-fluid" alt="Art from on of our games">
+                                    <img src="images/code.webp" class="img-fluid" alt="Art from on of our games">
                                 </div>
                                 <div class="carousel-item">
                                     <img src="images/slide.webp" class="img-fluid" alt="Screenshot from on of our games">
