--- a/index.html
+++ b/index.html
@@ -127,16 +127,16 @@
                                     <button type="button" data-bs-target="#coming-soon-carousel" data-bs-slide-to="3" aria-label="Slide 4"></button>
                                 </div>
                                 <div class="carousel-item active">
-                                    <img src="images/code.webp" class="img-fluid" alt="Art from on of our games">
+                                    <img src="images/code.webp" class="img-fluid" alt="">
                                 </div>
                                 <div class="carousel-item">
-                                    <img src="images/slide.webp" class="img-fluid" alt="Screenshot from on of our games">
+                                    <img src="images/pc.jpg" class="img-fluid" alt="">
                                 </div>
                                 <div class="carousel-item">
-                                    <img src="images/slide.webp" class="img-fluid" alt="Poster from on of our games">
+                                    <img src="images/unreal5.avif" class="img-fluid" alt="">
                                 </div>
                                 <div class="carousel-item">
-                                    <img src="images/slide.webp" class="img-fluid" alt="Art from on of our games">
+                                    <img src="images/uelogo.avif" class="img-fluid" alt="">
                                 </div>
                             </div>
                             <div class="carousel-progress">
