removed newsletter mention

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                         <div class="content-box text-center">
                             <h1 class="uppercase"><span class="strong">Astro Dynamics</span><br>Coming Soon</h1>
                             <h2 class="uppercase strong">15 November 2025</h2>
-                            <p>Our awesome website is under construction. <br> Subscribe to the newsletter or find us on social media for updates.</p>
+                            <p>Our awesome website is under construction.</p>
 
                             <!-- Newsletter form
                             <div class="newsletter">
